Extend with follow-my-dream.slash-dev.de

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,12 @@ sites:
     url: https://slash-dev.de
     assignees:
       - Slashdacoda
-
+      
+  - name: Reise ins Unbekannte
+    url: https://follow-my-dream.slash-dev.de/
+    assignees:
+      - Slashdacoda
+    
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
